fixed overflow

--- a/app/assets/stylesheets/carousel_video.scss
+++ b/app/assets/stylesheets/carousel_video.scss
@@ -5,7 +5,7 @@
     height: 20%;
     background: black;
     margin: 0;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .right-button-click {
