--- a/app/assets/stylesheets/small_videos.scss
+++ b/app/assets/stylesheets/small_videos.scss
@@ -8,8 +8,8 @@
     margin-right: .5%;
     margin-bottom: 5%;
     transition: transform 300ms ease 100ms;
-    height: 100%;
-    width: 18%;
+    height: 20%;
+    width: 15%;
     max-height: 150px;
     
     
@@ -33,7 +33,7 @@
 .big-video-image {
     display: none;
     height: 100%;
-    width: 98%;
+    width: 100%;
     max-height: 120px;
     margin: 0;
     padding: 0;
@@ -74,9 +74,9 @@
 }
 
 .big-box:hover .big-video-image {
-    // display: block;
+    display: block;
     display: absolute;
-    z-index: 5;
+    z-index: 1;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: 100%;
@@ -122,8 +122,7 @@
 .carousel-whole {
     padding-top: 1%;
     background-color: black;
-    margin-left: 2%;
-    padding-left: 3%;
+    margin-left: 4%;
 }
 
 .carousel-whole-parent {
